# band

./: .dockerignore  .gitignore  .jscpd.json  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  docker-compose.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.band/: config.json  config.yaml
.claude/: coding-criteria.md  performance-criteria.md  pr-review-criteria.md  security-criteria.md  testing-criteria.md
.claude/agents/: coding-reviewer.md  performance-reviewer.md  pr-reviewer.md  security-reviewer.md  testing-reviewer.md
.claude/skills/: web-test.md
.github/workflows/: ci.yml  claude-review.yml  nightly.yml  release.yml
.husky/: pre-push
apps/cli/: Cargo.toml  SKILL.md  package.json
apps/cli/skills/: band-browser.md  band-chat.md  band-cli.md  band-loop.md  band-start.md  band-terminal.md  band.md
apps/cli/skills/band/: SKILL.md
apps/cli/skills/band-browser/: SKILL.md
apps/cli/skills/band-chat/: SKILL.md
apps/cli/skills/band-loop/: SKILL.md
apps/cli/skills/band-terminal/: SKILL.md
apps/cli/src/: api.rs  git.rs  main.rs  onboarding.rs  render.rs  shell.rs  skills.rs  state.rs
apps/cli/tests/: integration.rs  list-panel-states.mjs  read-chat-layout.mjs  read-layout.mjs  seed-chat-layout.mjs  seed-db.mjs  seed-settings.mjs  set-active-workspace.mjs
apps/dashboard/: index.html  package.json  (+2 more)
docker/: Dockerfile  README.md  entrypoint.sh
docs/: cli.md  frontend-testing.md  integration-testing.md  web-architecture.md
scripts/: bump-version.mjs  dev-desktop.mjs  generate-homebrew-cask.mjs
(+879 files in other folders)
